# asteroids

./: CMakeLists.txt  Proiect.kdev4  README.md  asteroid.cpp  asteroid.h  collisions.cpp  collisions.h  lab_TGIP_1.vcxproj  main.cpp  object_manager.h  physics_object.cpp  physics_object.h  projectile.cpp  projectile.h  rendered_object.cpp  rendered_object.h  shader.cpp  ship.cpp  ship.h
Debug/: ACG_Lab3.exe.recipe  ACG_Lab4.exe.recipe  ACG_Lab4.ilk
Debug/ACG_Lab3.tlog/: ACG_Lab3.lastbuildstate
Debug/ACG_Lab4.tlog/: ACG_Lab4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/ACG_Project_Ex1.tlog/: ACG_Project_Ex1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
